--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,8 @@
         "source.organizeImports": "always"
     },
     "editor.tabSize": 4,
+    "scss.validate": false,
+    "css.validate": false,
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
