--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.1",
         "@radix-ui/react-accordion": "^1.2.1",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
@@ -19,9 +20,11 @@
         "next": "14.2.13",
         "react": "^18",
         "react-dom": "^18",
+        "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
         "tailwind-merge": "^2.5.2",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/node": "^20",
