--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "drive-insight-website",
     "version": "0.1.0",
     "private": true,
+    "proxy": "http://localhost:3000",
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -14,6 +15,7 @@
         "@radix-ui/react-checkbox": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
         "class-variance-authority": "^0.7.0",
@@ -24,6 +26,7 @@
         "react-dom": "^18",
         "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
+        "shippo": "^2.13.0",
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "zod": "^3.23.8"
